# stangastaden

./: .dockerignore  .gitignore  Dockerfile  README.md  app.py  cdk.json  package-lock.json  package.json  pyproject.toml
src/stangastaden/: server.py
stangastaden_infra/stacks/: mcp_stack.py
